# picture_taker

./: CMakeLists.txt  package.xml
config/: multi_turn.yaml
launch/: controller.launch
src/: motor_controller.cpp  picture_server.cpp
